--- a/Front/index.html
+++ b/Front/index.html
@@ -34,6 +34,7 @@
             </div>
         </div>
     </div>
+    <script src="./func.js"></script>
     <script src="./chat.js"></script>
 </body>
 </html>
