added cosmetic changes and number of users, line break
- the number of users online
- box shadows
- line break in case of overflow(not completed, there are bugs)

--- a/Front/index.html
+++ b/Front/index.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+    <div id="sideBar">
+        <div id="onlineUsersContainer">
+            <div id="сircle"></div>
+            <div id="onlineNow">Online now: </div>
+            <!-- the number of users is added here -->
+        </div>
+        <div id="listUsers"></div>
+    </div>
     
     <div class="main">
         <div id="upBar">
