fix numbers of users
before the patch, the numbers were written in one line after connecting a new user

--- a/Front/index.html
+++ b/Front/index.html
@@ -14,7 +14,7 @@
     <div id="sideBar">
         <div id="onlineUsersContainer">
             <div id="сircle"></div>
-            <div id="onlineNow">Online now: </div>
+            <div id="onlineNow">Online now: <span id="intOnline"></span></div>
             <!-- the number of users is added here -->
         </div>
         <div id="listUsers"></div>
